[gd_scene load_steps=8 format=3 uid="uid://d2lwkr72x2h4j"]

[ext_resource type="Script" path="res://scripts/popup_box.gd" id="1_d2eaf"]
[ext_resource type="FontFile" uid="uid://dfro1uw22cv6y" path="res://assets/fonts/Dicier-Round-Heavy.otf" id="2_gpjs5"]
[ext_resource type="Shader" path="res://scenes/popup_box.gdshader" id="2_xo6qv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ubi3n"]
shader = ExtResource("2_xo6qv")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_xk61j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Exit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m0rem"]
resource_name = "blur"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Exit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bssd"]
_data = {
"RESET": SubResource("Animation_xk61j"),
"blur": SubResource("Animation_m0rem")
}

[node name="PopupBox" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2eaf")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ubi3n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.041
anchor_top = 0.181
anchor_right = 0.95
anchor_bottom = 0.682
offset_left = -0.280003
offset_top = 0.47998
offset_bottom = -0.440063

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 142
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="AnyDiceRoll" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_gpjs5")
theme_override_font_sizes/font_size = 200
text = "1 2 3"
autowrap_mode = 2

[node name="any_roll_timer" type="Timer" parent="PanelContainer/MarginContainer/VBoxContainer/AnyDiceRoll"]
wait_time = 0.8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MinusDice" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 150
text = " - "

[node name="NumDice" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 3 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusDice" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " + "

[node name="Exit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 81.0
offset_top = 387.0
offset_right = 184.0
offset_bottom = 505.0
theme_override_font_sizes/font_size = 80
text = "X"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5bssd")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/AnyDiceRoll" to="." method="_on_any_dice_roll_pressed"]
[connection signal="timeout" from="PanelContainer/MarginContainer/VBoxContainer/AnyDiceRoll/any_roll_timer" to="." method="_on_any_roll_timer_timeout"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusDice" to="." method="_on_minus_dice_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusDice" to="." method="_on_plus_dice_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
